--- a/src/ZectranetBundle/Resources/views/sprint.html.twig
+++ b/src/ZectranetBundle/Resources/views/sprint.html.twig
@@ -1,6 +1,6 @@
 {% extends '@Zectranet/index.html.twig' %}
 
-{% block title %}Sprint page{% endblock %}
+{% block title %} {{ sprint.name }} {% endblock %}
 
 {% block body %}
     <div ng-controller="SprintController" ng-init="getTasks();">
@@ -35,35 +35,46 @@
 
                     <div class="col-md-6">
                         <!-- Begin of Office controll buttons -->
-                        {% if (project.owner.id == app.user.id) or (is_granted('ROLE_ADMIN')) %}
                             <div class="pull-right">
-                                <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Delete This Sprint">
-                                    <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_sprint">
-                                        <i class="fa text-danger fa-fw fa-trash fa-2x"></i>
-                                    </a>
-                                </div>
-
-                                <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="## Under Construction ##">
-                                    <a style="cursor: pointer; text-decoration: none;">
-                                        <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
-                                    </a>
-                                </div>
-
-                                {% if sprint.status.label == 'Open' %}
-                                    <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Start Sprint">
-                                        <a href="{{ path('zectranet_sprint_change_state', {'sprint_id': sprint.id, 'state': 2}) }}" style="text-decoration: none;">
-                                            <i class="fa fa-fw fa-play-circle fa-2x" style="color: {{ sprint_status[1].color }}"></i>
+                                {% if (project.owner.id == app.user.id) or (is_granted('ROLE_ADMIN')) %}
+                                    <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Delete This Sprint">
+                                        <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#delete_sprint">
+                                            <i class="fa text-danger fa-fw fa-trash fa-2x"></i>
                                         </a>
                                     </div>
-                                {% elseif sprint.status.label == 'In-Progress' %}
-                                    <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Stop Sprint">
-                                        <a href="{{ path('zectranet_sprint_change_state', {'sprint_id': sprint.id, 'state': 3}) }}" style="text-decoration: none;">
-                                            <i class="fa fa-fw fa-pause fa-2x" style="color: {{ sprint_status[2].color }}"></i>
+
+                                    <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Sprint Settings">
+                                        <a href="{{ path('zectranet_show_sprint_settings', {'project_id': project.id, 'sprint_id': sprint.id}) }}" style="cursor: pointer; text-decoration: none;">
+                                            <i class="fa text-primary fa-fw fa-gear fa-2x"></i>
                                         </a>
                                     </div>
                                 {% endif %}
+
+                                {% set enableSS = false %}
+
+                                {% for permission in sprint.Permissions %}
+                                    {% if (permission.userid == app.user.id) and (permission.enableStartSprint) %}
+                                        {% set enableSS = true %}
+
+                                    {% endif %}
+                                {% endfor %}
+
+                                {% if (project.owner.id == app.user.id) or (is_granted('ROLE_ADMIN')) or (enableSS == true) %}
+                                    {% if sprint.status.label == 'Open' %}
+                                        <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Start Sprint">
+                                            <a href="{{ path('zectranet_sprint_change_state', {'sprint_id': sprint.id, 'state': 2}) }}" style="text-decoration: none;">
+                                                <i class="fa fa-fw fa-play-circle fa-2x" style="color: {{ sprint_status[1].color }}"></i>
+                                            </a>
+                                        </div>
+                                    {% elseif sprint.status.label == 'In-Progress' %}
+                                        <div class="pull-right clearfix" data-toggle="tooltip" data-placement="top" title="Stop Sprint">
+                                            <a href="{{ path('zectranet_sprint_change_state', {'sprint_id': sprint.id, 'state': 3}) }}" style="text-decoration: none;">
+                                                <i class="fa fa-fw fa-pause fa-2x" style="color: {{ sprint_status[2].color }}"></i>
+                                            </a>
+                                        </div>
+                                    {% endif %}
+                                {% endif %}
                             </div>
-                        {% endif %}
                         <!-- End of Office controll buttons -->
                     </div>
                 </div>
@@ -74,6 +85,9 @@
 
         <div class="row" ng-cloak>
             <div class="col-xs-12" style="margin-bottom: 15px;">
+                <h4 class="pull-right text-muted" style="margin-left: 20px;">
+                    Total bugs: [[ totalEstimation.bh + 'h ' + totalEstimation.bm + 'm' ]]
+                </h4>
                 <h4 class="pull-right text-muted" style="margin-left: 20px;">
                     Total estimation: [[ totalEstimation.h + 'h ' + totalEstimation.m + 'm' ]]
                 </h4>
