--- a/src/ZectranetBundle/Resources/views/projectSprints.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectSprints.html.twig
@@ -21,28 +21,39 @@
                         </div>
                     {% endif %}
 
-                    <div ng-init="showAddSprint = false" style="float: right; margin: 10px 0;">
-                        <a ng-click="showAddSprint = !showAddSprint" style="color:#606060 !important;" class="addnew-btn-hover" href="#">
-                            Add New Sprint
-                        </a>
-                    </div>
-                    <div class="clearfix"></div>
+                    {% set enableCS = false %}
 
-                    <div ng-show="showAddSprint" class="list-group-item" style="padding: 5px 20px;">
-                        <form action="{{ path('zectranet_sprint_add', { 'project_id': project.id }) }}" method="post">
-                            <div class="form-group">
-                                <label for="add_sprint_name">Sprint Name:</label>
-                                <input type="text" id="add_sprint_name" pattern="[0-9A-Za-z -_()]{1,30}" class="form-control" name="name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="add_sprint_description">Sprint Description:</label>
-                                <input type="text" id="add_sprint_description" class="form-control" name="description" pattern="[0-9A-Za-z -_()]{1,50}" required>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Add</button>
-                            </div>
-                        </form>
-                    </div>
+                    {% for permission in project.projectPermissions %}
+                        {% if (permission.userid == app.user.id) and (permission.enableCreateSprint) %}
+                            {% set enableCS = true %}
+
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if (project.owner.id == app.user.id) or (enableCS == true) %}
+                        <div ng-init="showAddSprint = false" style="float: right; margin: 10px 0;">
+                            <a ng-click="showAddSprint = !showAddSprint" style="color:#606060 !important;" class="addnew-btn-hover" href="#">
+                                Add New Sprint
+                            </a>
+                        </div>
+                        <div class="clearfix"></div>
+
+                        <div ng-show="showAddSprint" class="list-group-item" style="padding: 5px 20px;">
+                            <form action="{{ path('zectranet_sprint_add', { 'project_id': project.id }) }}" method="post">
+                                <div class="form-group">
+                                    <label for="add_sprint_name">Sprint Name:</label>
+                                    <input type="text" id="add_sprint_name" pattern="[0-9A-Za-z -_()]{1,30}" class="form-control" name="name" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="add_sprint_description">Sprint Description:</label>
+                                    <input type="text" id="add_sprint_description" class="form-control" name="description" pattern="[0-9A-Za-z -_()]{1,50}" required>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-primary">Add</button>
+                                </div>
+                            </form>
+                        </div>
+                    {% endif %}
 
                 </div>
             </div>
